--- a/static/filtros_horarios/css/horarios_por_docente.css
+++ b/static/filtros_horarios/css/horarios_por_docente.css
@@ -202,8 +202,7 @@
     }
     .docente-nombre{
             font-weight: bold;
-            color: white;
-            background-color: #4214fa;
+            color: #4214fa;
     }
 }
 
