--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -139,7 +139,7 @@
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="{{url_for('cursosxescuela')}}">
 										<i class="align-middle" data-feather="check-square"></i> <span
-											class="align-middle">Grupos por Curso</span>
+											class="align-middle">Asignar Grupos- Curso</span>
 									</a>
 								</li>
 		
@@ -314,7 +314,7 @@
 					<div class="navbar-collapse collapse">
 
 						<ul class="navbar-nav navbar-align">
-							<button class="theme-toggle" id="theme-toggle" title="Activar/desactivar modo oscuro"
+							<!-- <button class="theme-toggle" id="theme-toggle" title="Activar/desactivar modo oscuro"
 								aria-label="auto" aria-live="polite"
 								style="border: none; background: none; color: black;">
 								<svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
@@ -335,7 +335,7 @@
 										<line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
 									</g>
 								</svg>
-							</button>
+							</button> -->
 
 
 
