--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/responsive/3.0.2/css/responsive.bootstrap5.css">
 	<script src="/static/js/autocomplete-0.3.0.js"></script>
 	<script src="/static/js/jquery-1.8.2.min.js"></script>
-	<script src="{{ url_for('static', filename='js/Login/auto_logout.js') }}"></script>
+	<!-- <script src="{{ url_for('static', filename='js/Login/auto_logout.js') }}"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 	<link rel="stylesheet" href="/static/css/autocomplete-0.3.0.css">
 
