[UPDT]  CHATBOT ELIMINADO

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -316,12 +316,12 @@
 					<div class="navbar-collapse collapse">
 
 						<ul class="navbar-nav navbar-align">
-							<button type="button" class="btn btn-danger">
+							<!-- <button type="button" class="btn btn-danger">
 								<a class="mt-2 text-white  text-center"
 									href="{{url_for('mostrar_chatbot')}}">
 									Asistente virtual
 								</a>
-							</button>
+							</button> -->
 							<!-- <button class="theme-toggle" id="theme-toggle" title="Activar/desactivar modo oscuro"
 								aria-label="auto" aria-live="polite"
 								style="border: none; background: none; color: black;">
